# human_detector

./: .gitignore  .pre-commit-config.yaml  README.md  python_linter.flake8
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/actions/lint/: action.yml
.github/workflows/: build_and_test_humble.yaml  build_and_test_iron.yaml  build_and_test_jazzy.yaml  build_and_test_rolling.yaml  lint.yaml  lint_iron.yaml
.github/workflows/lint/: run.sh
human_detector/: package.xml  setup.cfg  setup.py
human_detector/human_detector/: human_detector.py  human_detector_parameters.py  human_detector_parameters.yaml
human_detector/launch/: human_detector.launch.py
